<resources>
    <string name="app_name">Comprame</string>
    <string name="logo_desc">Logo</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Contraseña</string>
    <string name="login_button">Login</string>
    <string name="link_registrarse">¿Todavía no está registrado? Regístrese aquí</string>
    <string name="name_hint">Nombre</string>
    <string name="signup">Registrarse</string>

    <string name="already_user_text">¿Ya está registrado? Ingrese aquí</string>
    <string name="password_error">La contraseña debe tener entre 4 y 10 caracteres alfanuméricos</string>
    <string name="email_error">Ingrese un email válido</string>
    <string name="name_error">El nombre debe tener al menos 2 caracteres</string>

    <string name="lastname">Apellido</string>

    <string name="lastname_error">El apellido debe tener al menos 2 caracteres</string>
    <string name="userName_hint">Nombre de Usuario</string>

    <string name="nav_header_desc">Encabezado</string>
    <string name="nav_header_title">Opciones</string>
    <string name="nav_header_subtitle">Subtitulo</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Cerrar menu</string>

    <string name="profile">Perfil</string>
    <string name="sell">Vender</string>
    <string name="upload_image">Cargar imagen</string>

    <string name="search">Buscar</string>

    <string name="imagen_item_desc">Imagen SearchItem</string>
    <string name="filtro">Filtro</string>
    <string name="nombre_articulo_hint">Título de la publicación</string>
    <string name="descripcion_articulo_hint">Descripción de la publicación</string>
    <string name="boton_filtrar">Filtrar</string>

    <string name="item_payment_methods">Metodos de Pago</string>
    <string name="item_category">Categorias</string>
    <string name="item_location">UBICACIÓN</string>
    <string name="item_unit_price">Precio Unitario</string>
    <string name="item_units">Unidades</string>
    <string name="item_description">Descripción</string>
    <string name="item_name">Nombre</string>
    <string name="buy">Comprar</string>
    <string name="buy_with_delivery">Comprar Con Envio</string>
    <string name="buy_without_delivery">Comprar Sin Envio</string>
    <string name="total">Total</string>
    <string name="units">Unidades</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="card_owner">Nombre como aparece en la tarjeta</string>
    <string name="card_expiration_month">Mes de Expiración</string>
    <string name="card_expiration_year">Año de Expiración</string>
    <string name="card_security_code">Código de Seguridad</string>
    <string-array name="payment_methods">
        <item>Crédito</item>
        <item>Débito</item>
    </string-array>

    <string name="update_profile_text">Actualizar Perfil</string>

    <string name="map_api_key">AIzaSyAtSeTb36nPHGAnXXnJxW-wrQ3_SgGBSKU</string>
    <string name="preguntas">Preguntas</string>
    <string name="new_question">Hacer una pregunta</string>
    <string name="pregunta">Escribir una pregunta…</string>
    <string name="question_save_button">Preguntar</string>
    <string name="question_error">La pregunta debe tener al menos 2 caracteres</string>
    <string name="answer_error">La respuesta debe tener al menos 2 caracteres</string>
    <string name="answer">Escribir una respuesta…</string>
    <string name="answer_save_button">Responder</string>
    <string name="my_purchases">Mis Compras</string>
    <string name="my_sellings">Mis Ventas</string>
    <string name="open_chat_purchase">Enviar un mensaje al vendedor</string>
    <string name="open_chat_sell">Enviar un mensaje al comprador</string>
    <string name="send_message_hint">Escribir un mensaje…</string>
    <string name="kilometers_filter_hint">Distancia máxima (km)</string>
    <string name="send_button_desc">Send button</string>
    <string name="qr_code">Comprar con Código QR</string>
    <string name="generate_qr_code">Generar código QR</string>
    <string name="qr_code_explanation">Podés usar este código QR para acceder a esta publicación de la manera más fácil! Tocá la imagen para imprimir</string>
    <string name="categories">CATEGORÍAS</string>
    <string name="category">Categoría</string>
    <string name="category_save_button">Agregar categoría</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="fcm_message">Notificación de comprame!</string>
    <string name="my_publications">Mis Publicaciones</string>
    <string name="edit_publication">Actualizar Publicación</string>
    <string name="delivery_estimate">Estimar Envío</string>
</resources>
