<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_fragment"
    tools:context="com.comprame.login.LoginActivity">

    <data>

        <variable
            name="loginModel"
            type="com.comprame.login.LoginViewModel" />

        <variable
            name="fragment"
            type="com.comprame.login.LoginFragment" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:paddingRight="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/logo_desc"
                android:src="@drawable/logo" />

            <!-- User Name Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/login_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userName_hint"
                    android:inputType="textCapWords"
                    android:text="@={loginModel.name}"
                    app:validation="@{() -> loginModel.nameError()}" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:text="@={loginModel.password}"
                    app:validation="@{() -> loginModel.passwordError()}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorPrimary"
                app:btn_enable="@{loginModel.enabled}"
                android:onClick="@{fragment::logIn}"
                android:padding="12dp"
                android:text="@string/login_button"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/singup_link"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:onClick="signUpFragment"
                android:text="@string/link_registrarse"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</layout>
