<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.comprame.sell.SellFragment">

    <data>

        <variable
            name="fragment"
            type="com.comprame.sell.SellFragment" />

        <variable
            name="data"
            type="com.comprame.sell.SellViewModel" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:paddingRight="24dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/sell_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_name"
                    android:inputType="textAutoComplete|textCapSentences"
                    android:text="@={data.name}"
                    app:validation="@{() -> data.nameError()}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/sell_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_description"
                    android:inputType="textCapSentences"
                    android:text="@={data.description}"
                    app:validation="@{() -> data.descriptionError()}" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/sell_units"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/item_units"
                    android:inputType="number"
                    android:text="@={data.units}"
                    app:validation="@{() -> data.unitsError()}" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/sell_unit_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:hint="@string/item_unit_price"
                    android:inputType="numberDecimal"
                    android:text="@={data.unitPrice}"
                    app:validation="@{() -> data.unitPriceError()}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorPrimary"
                app:cardElevation="3dp"
                android:layout_margin="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/item_location"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:onClick="@{fragment::openPlacePicker}"
                    android:drawableStart="@drawable/ic_location"
                    android:tint="@color/white"/>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/list_geolocation_sell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorPrimary"
                app:cardElevation="3dp"
                android:layout_margin="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:textColor="@color/white"
                    android:text="@string/categories"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:onClick="@{fragment::openCategoryPopup}"
                    android:drawableEnd="@drawable/ic_add_button"
                    android:tint="@color/white"/>

            </android.support.v7.widget.CardView>

            <GridLayout
                android:id="@+id/category_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3">
            </GridLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/upload_image_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorPrimary"
                android:onClick="@{fragment::uploadImage}"
                android:padding="12dp"
                android:text="@string/upload_image"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/sell_item_images_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sell_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorPrimary"
                android:onClick="@{fragment::sell}"
                android:padding="12dp"
                android:text="@string/sell"
                android:textColor="@color/white"
                app:btn_enable="@{data.enabled}" />
        </LinearLayout>
    </ScrollView>
</layout>
