<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_fragment"
    tools:context="com.comprame.MainActivity">

    <data>
        <variable
            name="profileModel"
            type="com.comprame.profile.ProfileViewModel" />

        <variable
            name="fragment"
            type="com.comprame.profile.ProfileFragment" />
    </data>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="8dp"
            android:paddingRight="24dp">

            <!--  Nombre -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/profile_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:inputType="textCapWords"
                    android:text="@={profileModel.firstName}"
                    app:validation="@{()-> profileModel.firstNameError}" />
            </android.support.design.widget.TextInputLayout>

            <!--  Apellido -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/profile_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:inputType="textCapWords"
                    android:text="@={profileModel.lastName}"
                    app:validation="@{()-> profileModel.lastNameError}" />
            </android.support.design.widget.TextInputLayout>

            <!-- Email -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:text="@={profileModel.email}"
                    app:validation="@{()-> profileModel.emailError}" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/profile_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:text="@={profileModel.password}"
                    app:validation="@{()-> profileModel.passwordError}" />
            </android.support.design.widget.TextInputLayout>

            <!-- Boton -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/profile_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorPrimary"
                app:btn_enable="@{profileModel.enabled}"
                android:onClick="@{fragment::updateProfile}"
                android:padding="12dp"
                android:text="@string/update_profile_text"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</layout>
